--- a/css/styles.css
+++ b/css/styles.css
@@ -121,7 +121,7 @@ h1, h2, h3, h4, h5, h6, p {
     color: #4d5ae5;
 }
 
-.footer_logo {
+.footer-logo-accent {
     color: #f4f4fd
 }
 
@@ -161,7 +161,7 @@ h1, h2, h3, h4, h5, h6, p {
     margin: auto;
     border-radius: 4px;
     border: none;
-    min-width: 169px;
+    padding: 16px 32px;
     height: 56px;
     cursor: pointer;
     background-color: #4d5ae5;
@@ -200,6 +200,10 @@ h1, h2, h3, h4, h5, h6, p {
     gap: 24px;
 }
 
+.list-feature {
+    width: calc((100% - (24px * 3))/4);
+}
+
 .about-feature {
     margin-bottom: 8px;
     font-weight: 500;
@@ -229,13 +233,13 @@ h1, h2, h3, h4, h5, h6, p {
 
 
 .job-name {
-    padding: 32px 0;
+    padding: 32px 16px;
 }
 
 .team-item {
     background-color: #FFFFFF;
     border-radius: 0px 0px 4px 4px;
-    width: calc((100%-72px)/4);
+    width: calc((100% - 72px)/4);
     display: block;
 }
 
@@ -277,7 +281,7 @@ h1, h2, h3, h4, h5, h6, p {
 }
 
 .container-service {
-    width: calc((100%-48px)/3);
+    
     padding: 32px 16px;
     border: 1px solid #e7e9fc;
     border-top: none;
@@ -290,6 +294,10 @@ h1, h2, h3, h4, h5, h6, p {
     row-gap: 48px;
     align-items: left;
 }
+
+.about-service-item {
+    width: calc((100% - 48px)/3);
+}   
 
 .portfolio {
     margin-bottom: 72px;
